projects/fuse_example/target/classes/META-INF/fabric8/openshift/fuse-springboot-deployment-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=fuse-springboot&var-version=1.0.0-SNAPSHOT
  labels:
    app: fuse-springboot
    group: org.mycompany
    version: 1.0.0-SNAPSHOT
    provider: fabric8
  name: fuse-springboot-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: fuse-springboot
    group: org.mycompany
    version: 1.0.0-SNAPSHOT
    provider: fabric8
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=fuse-springboot&var-version=1.0.0-SNAPSHOT
      labels:
        app: fuse-springboot
        group: org.mycompany
        version: 1.0.0-SNAPSHOT
        provider: fabric8
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: springboot-fuse:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        name: camel-app
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
