projects/fuse_example/target/classes/META-INF/fabric8/openshift/fuse-springboot-route-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fuse-springboot
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: org.mycompany
  name: fuse-springboot-route
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fuse-springboot-service
    weight: 100
  wildcardPolicy: None
